improve menu for landscape orientation

--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
                         <ul>
                             <li>Przeglądy i&nbsp;klimatyzacji</li>
                             <li>Napełnienie klimatyzacji</li>
+                            <li>Uzupełnianie klimatyzacji nowy jaki i stary czynnik</li>
                             <li>Odgrzybianie klimatyzacji</li>
                             <li>Ozonowanie układu</li>
                             <li>W naszej ofercie mamy gaz do klimatyzacji i&nbsp;oringi</li>
@@ -232,8 +233,6 @@
                         <ul>
                             <li>Testy komputerowe</li>
                             <li>Wymiana </li>
-                            <li>Wulkanizacja</li>
-                            <li>Wyważanie</li>
                             <li>Weryfikacja silnika</li>
                             <li>Weryfikacja układu kierowniczego</li>
                             <li>Weryfikacja układu wydechowego</li>
@@ -438,7 +437,7 @@
                 <div class="contactUs__contact contactUs__form">
                     <h3>Prześlij wiadomość</h3>
                     <form id="form" name="Bernard" onsubmit="return validate_formularz(this)"
-                        action="mailto:loremipsum@email.com" method="post" enctype="text/plain">
+                        action="" method="post" enctype="text/plain">
                         <div class="contactUs__formBox">
                             <div class="contactUs__row50">
                                 <div class="contactUs__inputBox">
@@ -492,12 +491,12 @@
                             </span>
                             <p>Auto &ndash; Naprawa U BERNARDA<br>Olszyna 5A<br>26-080 Przełom</p>
                         </div>
-                        <div>
+                        <!-- <div>
                             <span>
                                 <i class="far fa-envelope"></i>
                             </span>
                             <a href="mailto:loremipsum@email.com">bernardzapala@gmail.com</a>
-                        </div>
+                        </div> -->
 
                         <div>
                             <span>
@@ -520,19 +519,19 @@
                         <h3>Godziny pracy</h3>
                         <ul class="contactUs_hours">
                             <li class="contactUs_hours-list">
-                                Poniedziałek &emsp;<span>08:00 - 16:00</span>
+                                Poniedziałek &emsp;<span>09:00 - 17:00</span>
                             </li>
                             <li class="contactUs_hours-list">
-                                Wtorek &emsp;&emsp;&emsp;<span>08:00 - 16:00</span>
+                                Wtorek &emsp;&emsp;&emsp;<span>09:00 - 17:00</span>
                             </li>
                             <li class="contactUs_hours-list">
-                                Środa &emsp;&emsp;&emsp;&ensp;<span>08:00 - 16:00</span>
+                                Środa &emsp;&emsp;&emsp;&ensp;<span>09:00 - 17:00</span>
                             </li>
                             <li class="contactUs_hours-list">
-                                Czwartek &emsp;&emsp;&nbsp;<span>08:00 - 16:00</span>
+                                Czwartek &emsp;&emsp;&nbsp;<span>09:00 - 17:00</span>
                             </li>
                             <li class="contactUs_hours-list">
-                                Piątek &emsp;&emsp;&emsp;&nbsp;<span>08:00 - 16:00</span>
+                                Piątek &emsp;&emsp;&emsp;&nbsp;<span>09:00 - 17:00</span>
                             </li>
                             <li class="contactUs_hours-list">
                                 Sobota &emsp;&emsp;&emsp;<span>09:00 - 14:00</span>
